--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                 </div>
             </div><!--fecha banner-->
 
+        </div> <!--feca hero-->
+    </div> <!--fecha container-->
+
+    <div class="content-section">
             <div class="category">
                 <span>Recomendados</span>
                 <div class="slider">
@@ -118,7 +122,7 @@
                     </div>
                 </div><!--fecha slider-->
             </div><!--fecha category-->
-
+    </div><!--fecha content section-->
 
             <div class="footer">
                 <div class="social">
@@ -167,9 +171,6 @@
                 </div><!--fecha flex-->
 
             </div><!--fecha footer-->
-
-        </div><!--fecha hero-->
-    </div><!--fecha container-->
 
 </body>
 
