--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="icon" type="image/png" href="./images/n.png">
     <title>Netflix</title>
 </head>
 
@@ -49,7 +50,7 @@
 
 
             <div class="banner">
-                <img src="images/banner.jpg" class="poster" alt="banner de introdução">
+                <img src="images/banner1.png" class="poster" alt="banner de introdução">
                 <span class="subtitle">
                     Esse projeto é um clone da netflix para apromirar as habilidades de uso de html e css. Apesar disso,
                     as recomendações são todas originais, então assistam!!
@@ -126,10 +127,10 @@
 
             <div class="footer">
                 <div class="social">
-                    <i class="fas fa-facebook-square"></i>
-                    <i class="fas fa-instagram"></i>
-                    <i class="fas fa-twitter"></i>
-                    <i class="fas fa-youtube"></i>
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-youtube"></i>
                 </div><!--fecha social-->
 
                 <div class="flex">
@@ -173,5 +174,5 @@
             </div><!--fecha footer-->
 
 </body>
-
+<script src="https://kit.fontawesome.com/dc89b4c778.js" crossorigin="anonymous"></script>
 </html>
